fix: fixed spacing in onboarding menu

--- a/src/sass/variantcss/_companySetup.scss
+++ b/src/sass/variantcss/_companySetup.scss
@@ -48,7 +48,6 @@
 .company-setup-menu-navigation-div{
   position: relative;
   line-height: 14px;
-  display: inline-block;
 }
 
 .company-setup-menu-navigation-title{
@@ -62,9 +61,9 @@
 .company-setup-menu-navigation-long-title{
   margin: 0;
   display: inline;
-  position: relative;
-  top: -7px;
-  left: 6px;
+  position: absolute;
+  top: 5px;
+  left: 33px;
 }
 
 .menu-number {
@@ -99,6 +98,7 @@
   margin-top: 5px;
 };
 .menu-arrow {
+  display: inline-block;
   position: relative;
   background-color: white;
   border: 1px solid #F8CF51;
